test/classes/initializers/errors/errHandling/initThrows.good
initThrows.chpl:6: error: initializers are not yet allowed to throw errors
